# image-manipulation-agent

./: README.md  agent.py  code_prompt.md  code_prompt2.md  dashboard.py  execution_server.py  execution_template.py.tmpl  ipc_runner.py  main.py  mise.toml  plan_prompt.md  plan_prompt2.md  plan_prompt3.md  pyproject.toml  report_utils.py  runner.py  spec.md  state_analysis_repl.py  streamlit.md  system-prompt.md  test_ipc.py  token_rate_limiter.py  visualize_graph.py
experiments/: v1.yaml  v2.yaml  v3.yaml  v4.yaml  v5.yaml
program_samples/: rotate.py
task_samples/: puzzle1.txt  puzzle2.txt  puzzle3.txt  puzzle4.txt
